--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@ footer {
       <li><a href="#maxify">Maxify</a></li>
       <li><a href="#services">Сервіси</a></li>
       <li><a href="#education">Освіта</a></li>
-      <li><a href="#contact" class="btn btn-olive" style="padding:9px 22px;">Замовити аудит</a></li>
+      <li><a href="#contact" class="btn btn-olive" style="padding:9px 22px; color:#fff;">Замовити аудит</a></li>
     </ul>
   </div>
 </nav>
@@ -1293,7 +1293,7 @@ footer {
           <p class="reveal d2">M4U виросла з консалтингової компанії до провайдера унікальних SaaS-продуктів для управління ціноутворенням і комерційними процесами у сфері нерухомості.</p>
           <p class="reveal d3">Ми єдині в Україні надаємо послуги із системної трансформації девелоперського бізнесу, поєднуючи передові технології, аналітику та глибоке розуміння потреб ринку.</p>
         </div>
-        <div class="about-quote reveal d4">Технології роблять гроші. Це не гасло — це наш щоденний доказ на проєктах вартістю 3+ млрд євро.</div>
+        <div class="about-quote reveal d4">Технології роблять гроші. Це не гасло — це наш щоденний доказ на проєктах вартістю 75+ млрд гривень.</div>
       </div>
       <div class="stats-panel reveal d2">
         <div class="sp-cell">
@@ -1336,7 +1336,7 @@ footer {
         <ul class="pc-features steel">
           <li>Клієнтоцентрична методологія продажів</li>
           <li>Комплексна автоматизація від ліда до договору</li>
-          <li>Інтеграція з Maxify, AI-агентами та візуалізацією</li>
+          <li>Інтеграція з Maxify.AI, AI-агентами, онлайн-шахівницей та системою інтерактивної візуалізації проекту</li>
           <li>Платформи: Creatio, NetHunt</li>
         </ul>
         <a href="#contact" class="btn btn-outline">Замовити впровадження →</a>
@@ -1430,9 +1430,9 @@ footer {
           <div class="roi-sub">ROI від впровадження</div>
           <div class="mx-row">
             <div class="mx-cell"><div class="mx-cn">+40%</div><div class="mx-cl">приріст ціни популярних квартир</div></div>
-            <div class="mx-cell"><div class="mx-cn">+16-30%</div><div class="mx-cl">приріст прибутку</div></div>
+            <div class="mx-cell"><div class="mx-cn">>4%</div><div class="mx-cl">приріст прибутку</div></div>
             <div class="mx-cell"><div class="mx-cn">-20%</div><div class="mx-cl">тривалість угод</div></div>
-            <div class="mx-cell"><div class="mx-cn">-25-30%</div><div class="mx-cl">зменшення знижок</div></div>
+            <div class="mx-cell"><div class="mx-cn">-25%</div><div class="mx-cl">розміру знижок</div></div>
           </div>
         </div>
       </div>
@@ -1484,21 +1484,6 @@ footer {
   </div>
 </section>
 
-<!-- CASES -->
-<section id="cases">
-  <div class="container">
-    <div class="section-head">
-      <div class="tag reveal">Результати</div>
-      <h2 class="reveal d1">Цифри, які неможливо проігнорувати</h2>
-      <p class="reveal d2">Кожен кейс — реальний проєкт із вимірюваним результатом.</p>
-    </div>
-    <div class="cases-grid">
-      <div class="case reveal"><div class="case-proj">Кейс: ONE Batumi</div><h3>Динамічне ціноутворення у преміальному сегменті</h3><p>Впровадження Maxify для преміального ЖК у Батумі дозволило максимізувати цінність кожної квартири через індивідуальну переоцінку.</p><div class="case-result"><span class="cr-num">+40%</span><span class="cr-label">приріст ціни популярних квартир</span></div></div>
-      <div class="case reveal d1"><div class="case-proj">Кейс: Stay&Rent</div><h3>Системне управління доходами проєкту</h3><p>Комплексний підхід до управління ціноутворенням та плану доходів для інвестиційного проєкту.</p><div class="case-result"><span class="cr-num">112%</span><span class="cr-label">виконання плану ціни продажу</span></div></div>
-    </div>
-  </div>
-</section>
-
 <!-- FOUNDER -->
 <section class="founder" id="founder">
   <div class="container">
@@ -1526,7 +1511,7 @@ footer {
     <div class="section-head">
       <div class="tag reveal">Освіта</div>
       <h2 class="reveal d1">Навчіть команду заробляти більше</h2>
-      <p class="reveal d2">Спільно з Київською Школою Девелопменту. Знання, перевірені практикою на проєктах вартістю 3+ млрд євро.</p>
+      <p class="reveal d2">Спільно з <a href="https://ksd.ua" target="_blank" style="color:var(--olive-light);text-decoration:underline;">Київською Школою Девелопменту</a>. Знання, перевірені практикою на проєктах вартістю 75+ млрд грн.</p>
     </div>
     <div class="edu-grid">
       <div class="edu reveal"><div class="edu-format">ОНЛАЙН-КУРС · ВОЛОДИМИР ДАНИЛЕНКО</div><h3>Прайс-менеджмент в нерухомості</h3><p>Від формування стартових цін до динамічного управління та автоматизації. Зменшення неліквідних квартир та максимізація прибутку.</p><div class="edu-tags"><span class="edu-t">CEO</span><span class="edu-t">Комерційний директор</span><span class="edu-t">Директор з продажів</span><span class="edu-t">Аналітик</span></div></div>
