--- a/index.html
+++ b/index.html
@@ -1425,15 +1425,14 @@ footer {
         <a href="https://maxify.ai" class="btn btn-maxify reveal d4" target="_blank">maxify.ai →</a>
       </div>
       <div class="reveal d2">
-        <div class="mx-visual-box">
-          <div class="roi-big">+800%</div>
-          <div class="roi-sub">ROI від впровадження</div>
-          <div class="mx-row">
-            <div class="mx-cell"><div class="mx-cn">+40%</div><div class="mx-cl">приріст ціни популярних квартир</div></div>
-            <div class="mx-cell"><div class="mx-cn">>4%</div><div class="mx-cl">приріст прибутку</div></div>
-            <div class="mx-cell"><div class="mx-cn">-20%</div><div class="mx-cl">тривалість угод</div></div>
-            <div class="mx-cell"><div class="mx-cn">-25%</div><div class="mx-cl">розміру знижок</div></div>
-          </div>
+        <div class="mx-visual-box" style="padding:0;overflow:hidden;">
+          <img src="images/maxify-ui.png" alt="Maxify — інтерфейс динамічного ціноутворення" style="width:100%;height:auto;display:block;border-radius:20px;">
+        </div>
+        <div class="mx-row" style="margin-top:20px;">
+          <div class="mx-cell"><div class="mx-cn">+40%</div><div class="mx-cl">приріст ціни популярних квартир</div></div>
+          <div class="mx-cell"><div class="mx-cn">>4%</div><div class="mx-cl">приріст прибутку</div></div>
+          <div class="mx-cell"><div class="mx-cn">-20%</div><div class="mx-cl">тривалість угод</div></div>
+          <div class="mx-cell"><div class="mx-cn">-25%</div><div class="mx-cl">розміру знижок</div></div>
         </div>
       </div>
     </div>
@@ -1488,7 +1487,9 @@ footer {
 <section class="founder" id="founder">
   <div class="container">
     <div class="founder-grid">
-      <div class="founder-photo reveal">👤</div>
+      <div class="founder-photo reveal" style="padding:0;font-size:0;">
+        <img src="images/founder.jpg" alt="Володимир Даниленко — CEO M4U" style="width:100%;height:100%;object-fit:cover;border-radius:20px;">
+      </div>
       <div>
         <div class="tag reveal">Засновник</div>
         <h2 class="reveal d1" style="font-size:clamp(1.7rem,2.8vw,2.4rem);font-weight:800;margin-bottom:6px;">Володимир Даниленко</h2>
