--- a/index.html
+++ b/index.html
@@ -1402,17 +1402,22 @@ footer {
 
 <!-- NAV -->
 <nav id="nav">
-  <div class="container nav-inner">
-    <img src="" alt="M4U" class="nav-logo" id="nav-logo-img">
-    <ul class="nav-links">
-      <li><a href="#about">Про нас</a></li>
-      <li><a href="#products">Продукти</a></li>
-      <li><a href="#maxify">Maxify</a></li>
-      <li><a href="#services">Сервіси</a></li>
-      <li><a href="#education">Освіта</a></li>
-      <li>          <a href="#contact" class="btn btn-olive" style="padding:9px 22px; color:#fff;" onclick="event.preventDefault();openPopup()">Замовити аудит</a></li>
-    </ul>
+<div class="container nav-inner">
+  <img src="" alt="M4U" class="nav-logo" id="nav-logo-img">
+  <ul class="nav-links">
+    <li><a href="#about">Про нас</a></li>
+    <li><a href="#products">Продукти</a></li>
+    <li><a href="#maxify">Maxify</a></li>
+    <li><a href="#services">Сервіси</a></li>
+    <li><a href="#education">Освіта</a></li>
+    <li><a href="#contact" class="btn btn-olive" style="padding:9px 22px; color:#fff;" onclick="event.preventDefault();openPopup()">Замовити аудит</a></li>
+  </ul>
+  <div class="lang-switch">
+    <a href="/" class="lang-active">UA</a>
+    <span class="lang-sep">/</span>
+    <a href="/en/" style="color:var(--text-muted);">EN</a>
   </div>
+</div>
 </nav>
 
 <!-- HERO -->
