--- a/index.html
+++ b/index.html
@@ -4,7 +4,88 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>M4U — Технології та сервіси, що генерують прибуток в нерухомості</title>
-<meta name="description" content="M4U — PropTech-екосистема для девелоперів. Динамічне ціноутворення Maxify, CRM4U, аналітика P/ARC. 60+ проєктів, 8 країн, 3+ млрд євро.">
+<meta name="description" content="M4U — PropTech-екосистема для девелоперів. Динамічне ціноутворення Maxify, CRM4U, аналітика P/ARC. 60+ проєктів, 8 країн, €3+ млрд портфель.">
+<meta name="keywords" content="PropTech Україна, динамічне ціноутворення нерухомість, CRM для девелопера, Maxify, M4U, автоматизація продажів нерухомість, revenue management девелопер, P/ARC аналітика, CRM4U">
+<meta name="robots" content="index, follow">
+<meta name="author" content="M4U">
+<link rel="canonical" href="https://m4u.ua/">
+<link rel="alternate" hreflang="uk" href="https://m4u.ua/">
+<link rel="alternate" hreflang="en" href="https://m4u.ua/en/">
+<link rel="alternate" hreflang="x-default" href="https://m4u.ua/">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://m4u.ua/">
+<meta property="og:title" content="M4U — Технології, що генерують прибуток в нерухомості">
+<meta property="og:description" content="PropTech-екосистема для девелоперів. Maxify, CRM4U, P/ARC, Data4U, AI-Lab. 60+ проєктів, 8 країн, €3+ млрд портфель.">
+<meta property="og:image" content="https://m4u.ua/images/og-ua.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="M4U PropTech Ecosystem">
+<meta property="og:locale" content="uk_UA">
+<meta property="og:locale:alternate" content="en_US">
+<meta property="og:site_name" content="M4U">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="M4U — Технології, що генерують прибуток в нерухомості">
+<meta name="twitter:description" content="PropTech-екосистема для девелоперів. Maxify, CRM4U, P/ARC, Data4U, AI-Lab. 60+ проєктів, 8 країн, €3+ млрд.">
+<meta name="twitter:image" content="https://m4u.ua/images/og-ua.png">
+
+<!-- Favicon placeholder -->
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+<link rel="icon" type="image/png" href="/favicon.png">
+
+<!-- JSON-LD Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://m4u.ua/#organization",
+      "name": "M4U",
+      "url": "https://m4u.ua/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://m4u.ua/images/og-ua.png"
+      },
+      "description": "PropTech-екосистема для девелоперів. Динамічне ціноутворення, CRM, аналітика ринку, автоматизація продажів.",
+      "foundingDate": "2018",
+      "areaServed": ["UA","PL","GB","GE","DE","CZ","RO","HU"],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+380931210455",
+        "contactType": "sales",
+        "availableLanguage": ["Ukrainian","English"]
+      },
+      "sameAs": [
+        "https://www.facebook.com/m4u.agency",
+        "https://www.linkedin.com/company/m4uestate"
+      ]
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://m4u.ua/#website",
+      "url": "https://m4u.ua/",
+      "name": "M4U",
+      "publisher": {"@id": "https://m4u.ua/#organization"},
+      "inLanguage": "uk"
+    },
+    {
+      "@type": "ItemList",
+      "name": "Продукти M4U",
+      "itemListElement": [
+        {"@type":"ListItem","position":1,"name":"Maxify — динамічне ціноутворення","url":"https://maxify.ai"},
+        {"@type":"ListItem","position":2,"name":"CRM4U — CRM для девелопера","url":"https://m4u.ua/#products"},
+        {"@type":"ListItem","position":3,"name":"P/ARC — аналітика ринку","url":"https://parc.com.ua"},
+        {"@type":"ListItem","position":4,"name":"Data4U — автоматична звітність","url":"https://m4u.ua/#products"},
+        {"@type":"ListItem","position":5,"name":"AI-Lab — AI-рішення","url":"https://m4u.ua/#products"}
+      ]
+    }
+  ]
+}
+</script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -1240,6 +1321,32 @@ footer {
   color: var(--text-muted);
 }
 
+.footer-social {
+  display: flex;
+  gap: 12px;
+  margin-top: 20px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.04);
+  border: 1px solid var(--border-hover);
+  color: var(--text-muted);
+  text-decoration: none;
+  transition: all 0.25s;
+}
+
+.social-link:hover {
+  background: var(--olive-muted);
+  border-color: var(--olive-border);
+  color: var(--olive-light);
+}
+
 @media (max-width: 768px) {
   .footer-grid { grid-template-columns: 1fr 1fr; gap: 36px; }
   .footer-bottom { flex-direction: column; gap: 10px; }
@@ -1811,6 +1918,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <svg class="footer-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.14 84.44" aria-label="M4U"><polygon fill="#fff" points="27.4 44.71 27.16 44.71 11.62 0 0 0 0 84.44 12.09 84.44 12.09 33.09 12.33 33.09 24.19 69.38 30.24 69.38 42.22 33.09 42.46 33.09 42.46 84.44 54.55 84.44 54.55 0 42.81 0 27.4 44.71"/><path fill="#fff" d="M128,0V64.28q0,4.51-2.13,6.64a7.73,7.73,0,0,1-10.67,0q-2.13-2.13-2.14-6.64V0H101V65.47a18.75,18.75,0,0,0,1.54,7.65A20.62,20.62,0,0,0,113,83.61a18.46,18.46,0,0,0,7.53,1.54,18.92,18.92,0,0,0,7.59-1.54,20.13,20.13,0,0,0,6.28-4.27,19.09,19.09,0,0,0,5.7-13.87V0Z"/><polygon fill="#fff" points="90.3 28.3 79.47 28.3 79.47 47.02 71.82 47.02 85.92 0 74.48 0 60.78 47.53 60.75 57.29 79.47 57.29 79.47 67.06 90.3 67.06 90.3 57.29 94.81 57.29 94.81 47.02 90.3 47.02 90.3 28.3"/><rect fill="#fff" x="60.75" y="74.31" width="34.06" height="10.14"/></svg>
         <p class="footer-desc">PropTech-екосистема, яка максимізує прибуток девелоперів через синергію інтелектуальних технологій.</p>
         <div class="footer-slogan">Income. We Trust.</div>
+        <div class="footer-social">
+          <a href="https://www.facebook.com/m4u.agency" target="_blank" rel="noopener" aria-label="Facebook M4U" class="social-link">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
+          </a>
+          <a href="https://www.linkedin.com/company/m4uestate" target="_blank" rel="noopener" aria-label="LinkedIn M4U" class="social-link">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6zM2 9h4v12H2z"/><circle cx="4" cy="4" r="2"/></svg>
+          </a>
+        </div>
       </div>
       <div class="f-col"><h4>Продукти</h4><ul><li><a href="https://maxify.ai" target="_blank">Maxify.AI</a></li><li><a href="#products">CRM4U</a></li><li><a href="https://parc.com.ua" target="_blank">P/ARC</a></li><li><a href="#products">Data4U</a></li><li><a href="#products">AI-Lab</a></li></ul></div>
       <div class="f-col"><h4>Сервіси</h4><ul><li><a href="#services">Система продажів</a></li><li><a href="#services">CRM-інтеграція</a></li><li><a href="#services">Управління доходами</a></li><li><a href="#services">Ціноутворення</a></li><li><a href="#services">Market Intelligence</a></li></ul></div>
